==============
lxml changelog
==============

Under Development
=================

Features added
--------------

* ``column`` field on error log entries to accompany the ``line`` field

* Error specific messages in XPath parsing and evaluation
  NOTE: for evaluation errors, you will now get an XPathEvalError instead of
  an XPathSyntaxError.  To catch both, you can except on ``XPathError``

* The regular expression functions in XPath now support passing a node-set
  instead of a string

* ``Element.addnext(el)`` and ``Element.addprevious(el)`` methods to support
  adding processing instructions and comments around the root node

* ``Element.attrib`` was missing ``clear()`` and ``pop()`` methods

* Extended type annotation in objectify: cleaner annotation namespace setup
  plus new ``xsiannotate()`` and ``deannotate()`` functions

* Support for custom Element class instantiation in lxml.sax: passing a
  ``makeelement`` function to the ElementTreeContentHandler will reuse the
  lookup context of that function

* '.' represents empty ObjectPath (identity)

* EXSLT RegExp support in standard XPath (not only XSLT)

* ``lxml.pyclasslookup`` module that can access the entire tree in read-only
  mode to help determining a suitable Element class

* ``Element.values()`` to accompany the existing ``.keys()`` and ``.items()``

* ``collectAttributes()`` C-function to build a list of attribute
  keys/values/items for a libxml2 node

Bugs fixed
----------

* XSLT parsing failed to pass resolver context on to imported documents

* ``ETXPath`` was missing the ``regexp`` keyword argument

* passing '' as XPath namespace prefix did not raise an error

* passing '' as namespace prefix in nsmap could be passed through to libxml2

* Objectify couldn't handle prefixed XSD type names in ``xsi:type``

* More ET compatible behaviour when writing out XML declarations or not

* More robust error handling in ``iterparse()``

* Documents lost their top-level PIs and comments on serialisation
